MODFEE-409 avoid potential for shifting editions elements in unit test.